--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <script src="https://unpkg.com/feather-icons"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/component.css">
-  <!-- <link rel="stylesheet" href="detail.css"> -->
   <link rel="stylesheet" href="css/overlay.css">
 
 
@@ -214,9 +213,9 @@
   </dialog>
 
 
-  <div id="myNav" class="overlay ">
+  <div id="overlay-produk" class="overlay">
+    <i class="size-32 close" data-feather="x-circle"></i>
     <div class="overlay-content">
-      <i class="back size-32" data-feather="x-circle" onclick="closeNav()"></i>
       <section class="details">
         <div class="container-detail">
           <div class="mySlides">
@@ -256,8 +255,8 @@
             <img src="img/9.webp">
           </div>
 
-          <a class="prev" onclick="plusSlides(-1)">❮</a>
-          <a class="next" onclick="plusSlides(1)">❯</a>
+          <a class="prev">❮</a>
+          <a class="next">❯</a>
 
           <!-- <div class="caption-container">
             <p id="caption"></p>
@@ -271,30 +270,38 @@
               <img class="demo cursor" src="img/2.webp" style="width:100%" onclick="currentSlide(2)" alt="Cinque Terre">
             </div>
             <div class="column">
-              <img class="demo cursor" src="img/3.webp" style="width:100%" onclick="currentSlide(3)" alt="Mountains and fjords">
+              <img class="demo cursor" src="img/3.webp" style="width:100%" onclick="currentSlide(3)"
+                alt="Mountains and fjords">
             </div>
             <div class="column">
-              <img class="demo cursor" src="img/4.webp" style="width:100%" onclick="currentSlide(4)" alt="Northern Lights">
+              <img class="demo cursor" src="img/4.webp" style="width:100%" onclick="currentSlide(4)"
+                alt="Northern Lights">
             </div>
             <div class="column">
-              <img class="demo cursor" src="img/5.webp" style="width:100%" onclick="currentSlide(5)" alt="Nature and sunrise">
+              <img class="demo cursor" src="img/5.webp" style="width:100%" onclick="currentSlide(5)"
+                alt="Nature and sunrise">
             </div>
             <div class="column">
-              <img class="demo cursor" src="img/6.webp" style="width:100%" onclick="currentSlide(6)" alt="Snowy Mountains">
+              <img class="demo cursor" src="img/6.webp" style="width:100%" onclick="currentSlide(6)"
+                alt="Snowy Mountains">
             </div>
             <div class="column">
-              <img class="demo cursor" src="img/7.webp" style="width:100%" onclick="currentSlide(7)" alt="Northern Lights">
+              <img class="demo cursor" src="img/7.webp" style="width:100%" onclick="currentSlide(7)"
+                alt="Northern Lights">
             </div>
             <div class="column">
-              <img class="demo cursor" src="img/8.webp" style="width:100%" onclick="currentSlide(8)" alt="Nature and sunrise">
+              <img class="demo cursor" src="img/8.webp" style="width:100%" onclick="currentSlide(8)"
+                alt="Nature and sunrise">
             </div>
             <div class="column">
-              <img class="demo cursor" src="img/9.webp" style="width:100%" onclick="currentSlide(9)" alt="Snowy Mountains">
+              <img class="demo cursor" src="img/9.webp" style="width:100%" onclick="currentSlide(9)"
+                alt="Snowy Mountains">
             </div>
           </div>
         </div>
       </section>
     </div>
+
   </div>
 
   <div class="container">
@@ -324,7 +331,7 @@
     <header class="header">
       <div class="hero">
         <h2 class="heading"><span class="h font-pacifico">Handayani</span><span class="s"> Store</h2>
-        <div class="p sub-heading font-ubuntu-sans">www.handayani-store.my.id</div>
+        <div class="p sub-heading">www.handayani-store.my.id</div>
       </div>
       <div class="features feature-1">
         <h4 class="banner">IDR 15K</h4>
@@ -425,78 +432,78 @@
     </section>
 
     <div class="title-section"># Rekomendasi</div>
-    <section class="goods">
-      <div class="good" onclick="openNav()">
+    <section id="produk" class="goods">
+      <div class="good">
         <img src="img/1.webp" alt="">
         <h4>ADVAN Workplus</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/2.webp" alt="">
         <h4>Gamis melayu</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/3.webp" alt="">
         <h4>Gamis bekasi</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/4.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/5.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/6.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/7.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/8.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/9.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/10.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/11.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/12.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/13.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/14.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
       </div>
-      <div class="good" onclick="openNav()">
+      <div class="good">
         <img src="img/15.webp" alt="">
         <h4>Gamis mesir</h4>
         <p>Rp 150.000</p>
