--- a/index.html
+++ b/index.html
@@ -300,6 +300,45 @@
           </div>
         </div>
       </section>
+      <section class="product-content">
+
+        <h2 class="product-title">nike shoes</h2>
+        <a href="#" class="product-link">visit nike store</a>
+        <div class="product-rating">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+          <span>4.7(21)</span>
+        </div>
+
+        <div class="product-price">
+          <p class="last-price">Old Price: <span>$257.00</span></p>
+          <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
+        </div>
+
+        <div class="product-detail">
+          <h2>about this item: </h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eveniet veniam tempora fuga tenetur placeat
+            sapiente architecto illum soluta consequuntur, aspernatur quidem at sequi ipsa!</p>
+          <ul>
+            <li>Color: <span>Black</span></li>
+            <li>Available: <span>in stock</span></li>
+            <li>Category: <span>Shoes</span></li>
+            <li>Shipping Area: <span>All over the world</span></li>
+            <li>Shipping Fee: <span>Free</span></li>
+          </ul>
+        </div>
+
+        <div class="purchase-info">
+          <input type="number" min="0" value="1">
+          <button type="button" class="btn">
+            Add to Cart <i class="fas fa-shopping-cart"></i>
+          </button>
+          <button type="button" class="btn">Compare</button>
+        </div>
+      </section>
     </div>
 
   </div>
