--- a/index - x.html
+++ b/index - x.html
@@ -300,34 +300,43 @@
           </div>
         </div>
       </section>
-
       <section class="product-content">
-        <div class="product-content font-poppins">
-          <p class="product-subtitle">Galeri > Pakaian Wanita > Gamis</p>
-          <h1 class="h1 product-title">Fall Limited Edition Sneakers</h1>
-          <p class="product-text">
-            These low-profile sneakers are your perfect casual wear companion. Featuring a
-            durable rubber outer sole, they’ll withstand everything the weather can offer.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga mollitia aspernatur nesciunt ex maiores,
-            eligendi magnam quibusdam rem corporis dolor architecto nobis illum voluptas nam consequatur illo atque,
-            cupiditate assumenda!
-          </p>
-          <div class="btn-group">
-            <div class="wrapper">
-              <p class="product-subtitle">HARGA:</p>
-              <span class="price" data-total-price>Rp 150.000</span>
-              <p class="product-subtitle">DISKON:</p>
-              <span class="badge">10<i class="size-18" data-feather="percent"></i> off</span>
-            </div>
-            <div class="menu-list">
-              <div class="icon"><i class="size-32" data-feather="shopping-cart"></i>
-                <p>Tambah ke keranjang</p>
-              </div>
-              <div class="icon"><i class="size-32" data-feather="message-circle"></i>
-                <p>Order via WhatsApp</p>
-              </div>
-            </div>
-          </div>
+
+        <h2 class="product-title">nike shoes</h2>
+        <a href="#" class="product-link">visit nike store</a>
+        <div class="product-rating">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star-half-alt"></i>
+          <span>4.7(21)</span>
+        </div>
+
+        <div class="product-price">
+          <p class="last-price">Old Price: <span>$257.00</span></p>
+          <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
+        </div>
+
+        <div class="product-detail">
+          <h2>about this item: </h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eveniet veniam tempora fuga tenetur placeat
+            sapiente architecto illum soluta consequuntur, aspernatur quidem at sequi ipsa!</p>
+          <ul>
+            <li>Color: <span>Black</span></li>
+            <li>Available: <span>in stock</span></li>
+            <li>Category: <span>Shoes</span></li>
+            <li>Shipping Area: <span>All over the world</span></li>
+            <li>Shipping Fee: <span>Free</span></li>
+          </ul>
+        </div>
+
+        <div class="purchase-info">
+          <input type="number" min="0" value="1">
+          <button type="button" class="btn">
+            Add to Cart <i class="fas fa-shopping-cart"></i>
+          </button>
+          <button type="button" class="btn">Compare</button>
         </div>
       </section>
     </div>
@@ -601,7 +610,6 @@
 
 
   <script src="js/script.js"></script>
-  <!-- <script src="js/produk.js"></script> -->
 </body>
 
 </html>
