--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
               <p class="product-subtitle">HARGA:</p>
               <span class="price" data-total-price>Rp 150.000</span>
               <p class="product-subtitle">DISKON:</p>
-              <span class="badge">10<i class="size-18" data-feather="percent"></i> off</span>
+              <span class="badge">10<i class="size-18" data-feather="percent"></i></span>
             </div>
             <div class="menu-list">
               <div class="icon"><i class="size-32" data-feather="shopping-cart"></i>
