--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/component.css">
   <link rel="stylesheet" href="css/overlay.css">
+  <link rel="stylesheet" href="swiperjs/swiper-bundle.css">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
 
 
 </head>
@@ -374,90 +376,93 @@
     </header>
 
     <div class="title-section"># Brands</div>
-    <section class="brands">
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-aje-zas.jpg" alt="">
-          <p>Aje Zas</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-aje-zas.jpg" alt="">
-          <p>Aje Zas</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-aje-zas.jpg" alt="">
-          <p>Aje Zas</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-aje-zas.jpg" alt="">
-          <p>Aje Zas</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
+
+    <section class="brands swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-aje-zas.jpg" alt="">
+            <p>Aje Zas</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-aje-zas.jpg" alt="">
+            <p>Aje Zas</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-aje-zas.jpg" alt="">
+            <p>Aje Zas</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-aje-zas.jpg" alt="">
+            <p>Aje Zas</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
       </div>
     </section>
 
@@ -596,12 +601,36 @@
         </div>
       </div>
     </nav>
-
   </div>
 
+ 
 
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
+  <script src="swiperjs/swiper-bundle.js"></script>
   <script src="js/script.js"></script>
-  <!-- <script src="js/produk.js"></script> -->
+
+
+  <!-- Initialize Swiper -->
+  <script>
+    var swiper = new Swiper(".mySwiper", {
+      slidesPerView: 8,
+      spaceBetween: 2,
+      centeredSlides: false,
+      autoplay: {
+        delay: 1500,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+    });
+  </script>
+
 </body>
 
 </html>
