--- a/index.html
+++ b/index.html
@@ -613,8 +613,8 @@
   <!-- Initialize Swiper -->
   <script>
     var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 8,
-      spaceBetween: 2,
+      slidesPerView: 7,
+      // spaceBetween: 2,
       centeredSlides: false,
       autoplay: {
         delay: 1500,
