--- a/index-x.html
+++ b/index-x.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/component.css">
   <link rel="stylesheet" href="css/overlay.css">
-
+  <link rel="stylesheet" href="swiperjs/swiper-bundle.css">
 
 </head>
 
@@ -258,11 +258,7 @@
           <a class="prev">❮</a>
           <a class="next">❯</a>
 
-          <!-- <div class="caption-container">
-            <p id="caption"></p>
-          </div> -->
-
-          <div class="row">
+            <div class="row">
             <div class="column">
               <img class="demo cursor" src="img/1.webp" style="width:100%" onclick="currentSlide(1)" alt="The Woods">
             </div>
@@ -300,48 +296,40 @@
           </div>
         </div>
       </section>
+
       <section class="product-content">
-
-        <h2 class="product-title">nike shoes</h2>
-        <a href="#" class="product-link">visit nike store</a>
-        <div class="product-rating">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star-half-alt"></i>
-          <span>4.7(21)</span>
-        </div>
-
-        <div class="product-price">
-          <p class="last-price">Old Price: <span>$257.00</span></p>
-          <p class="new-price">New Price: <span>$249.00 (5%)</span></p>
-        </div>
-
-        <div class="product-detail">
-          <h2>about this item: </h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo eveniet veniam tempora fuga tenetur placeat
-            sapiente architecto illum soluta consequuntur, aspernatur quidem at sequi ipsa!</p>
-          <ul>
-            <li>Color: <span>Black</span></li>
-            <li>Available: <span>in stock</span></li>
-            <li>Category: <span>Shoes</span></li>
-            <li>Shipping Area: <span>All over the world</span></li>
-            <li>Shipping Fee: <span>Free</span></li>
-          </ul>
-        </div>
-
-        <div class="purchase-info">
-          <input type="number" min="0" value="1">
-          <button type="button" class="btn">
-            Add to Cart <i class="fas fa-shopping-cart"></i>
-          </button>
-          <button type="button" class="btn">Compare</button>
+        <div class="product-content font-poppins">
+          <p class="product-subtitle">Galeri > Pakaian Wanita > Gamis</p>
+          <h1 class="h1 product-title">Fall Limited Edition Sneakers</h1>
+          <p class="product-text">
+            These low-profile sneakers are your perfect casual wear companion. Featuring a
+            durable rubber outer sole, they’ll withstand everything the weather can offer.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga mollitia aspernatur nesciunt ex maiores,
+            eligendi magnam quibusdam rem corporis dolor architecto nobis illum voluptas nam consequatur illo atque,
+            cupiditate assumenda!
+          </p>
+          <div class="btn-group">
+            <div class="wrapper">
+              <p class="product-subtitle">HARGA:</p>
+              <span class="price" data-total-price>Rp 150.000</span>
+              <p class="product-subtitle">DISKON:</p>
+              <span class="badge">10<i class="size-18" data-feather="percent"></i></span>
+            </div>
+            <div class="menu-list">
+              <div class="icon"><i class="size-32" data-feather="shopping-cart"></i>
+                <p>Tambah ke keranjang</p>
+              </div>
+              <div class="icon"><i class="size-32" data-feather="message-circle"></i>
+                <p>Order via WhatsApp</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </div>
 
   </div>
+
 
   <div class="container">
     <nav class="menu fixed-top">
@@ -383,90 +371,93 @@
     </header>
 
     <div class="title-section"># Brands</div>
-    <section class="brands">
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-aje-zas.jpg" alt="">
-          <p>Aje Zas</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-aje-zas.jpg" alt="">
-          <p>Aje Zas</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-aje-zas.jpg" alt="">
-          <p>Aje Zas</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-aje-zas.jpg" alt="">
-          <p>Aje Zas</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-umama-scarf.jpg" alt="">
-          <p>Umama Scarf</p>
-        </a>
-      </div>
-      <div class="brand">
-        <a href="">
-          <img src="img/brand-malica.jpg" alt="">
-          <p>Malica</p>
-        </a>
+
+    <section class="brands swiper mySwiper">
+      <div class="swiper-wrapper">
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-aje-zas.jpg" alt="">
+            <p>Aje Zas</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-aje-zas.jpg" alt="">
+            <p>Aje Zas</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-aje-zas.jpg" alt="">
+            <p>Aje Zas</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-aje-zas.jpg" alt="">
+            <p>Aje Zas</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-umama-scarf.jpg" alt="">
+            <p>Umama Scarf</p>
+          </a>
+        </div>
+        <div class="brand swiper-slide">
+          <a href="">
+            <img src="img/brand-malica.jpg" alt="">
+            <p>Malica</p>
+          </a>
+        </div>
       </div>
     </section>
 
@@ -605,10 +596,15 @@
         </div>
       </div>
     </nav>
-
   </div>
+ 
 
 
+
+
+
+
+  <script src="swiperjs/swiper-bundle.js"></script>
   <script src="js/script.js"></script>
 </body>
 
