--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="css/component.css">
   <link rel="stylesheet" href="css/overlay.css">
   <link rel="stylesheet" href="swiperjs/swiper-bundle.css">
+  <link rel="stylesheet" href="css/swiper.css">
+
 
 
 </head>
@@ -213,7 +215,6 @@
     </form>
   </dialog>
 
-
   <div id="overlay-produk" class="overlay">
     <i class="size-32 close" data-feather="x-circle"></i>
     <div class="overlay-content">
@@ -331,6 +332,7 @@
 
   </div>
 
+
   <div class="container">
     <nav class="menu fixed-top">
       <div class="logo">
@@ -347,7 +349,7 @@
           <p>Galeri</p>
         </div>
         <div class="icon"><i class="size-32" data-feather="youtube"></i>
-          <p>Short</p>
+          <p>Shorts</p>
         </div>
         <div class="icon"><i class="size-32" data-feather="message-circle"></i>
           <p>WhatsApp</p>
@@ -356,10 +358,30 @@
     </nav>
 
     <header class="header">
-      <div class="hero">
-        <h2 class="heading"><span class="h font-pacifico">Handayani</span><span class="s"> Store</h2>
-        <div class="p sub-heading">www.handayani-store.my.id</div>
+      <div class="hero swiper swiper1">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="img/15.webp" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/8.webp" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/13.webp" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/6.webp" alt="">
+          </div>
+        </div>
+        <div class="swiper-pagination swiper-pagination1"></div>
+        <div class="hero-logo">
+          <h2 class="heading"><span class="h font-pacifico">Handayani</span><span class="s"> Store</h2>
+        </div>
       </div>
+
+
+
+
       <div class="features feature-1">
         <h4 class="banner">IDR 15K</h4>
         <p class="item">Potongan Belanja</p>
@@ -370,235 +392,200 @@
       </div>
     </header>
 
-    <div class="title-section"># Brands</div>
-
-    <section class="brands swiper mySwiper">
-      <div class="swiper-wrapper">
-        <div class="brand swiper-slide">
-          <a href="">
+    <main>
+      <div class="title-section">Brands</div>
+      <section class="brands swiper swiper2">
+        <div class="swiper-wrapper">
+          <div class="brand swiper-slide">
             <img src="img/brand-umama-scarf.jpg" alt="">
             <p>Umama Scarf</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-malica.jpg" alt="">
             <p>Malica</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-aje-zas.jpg" alt="">
             <p>Aje Zas</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-umama-scarf.jpg" alt="">
             <p>Umama Scarf</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-malica.jpg" alt="">
             <p>Malica</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-aje-zas.jpg" alt="">
             <p>Aje Zas</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-umama-scarf.jpg" alt="">
             <p>Umama Scarf</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-malica.jpg" alt="">
             <p>Malica</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-aje-zas.jpg" alt="">
             <p>Aje Zas</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-umama-scarf.jpg" alt="">
             <p>Umama Scarf</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-malica.jpg" alt="">
             <p>Malica</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-aje-zas.jpg" alt="">
             <p>Aje Zas</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-umama-scarf.jpg" alt="">
             <p>Umama Scarf</p>
-          </a>
-        </div>
-        <div class="brand swiper-slide">
-          <a href="">
+          </div>
+          <div class="brand swiper-slide">
             <img src="img/brand-malica.jpg" alt="">
             <p>Malica</p>
-          </a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <div class="title-section"># Rekomendasi</div>
-    <section id="produk" class="goods">
-      <div class="good">
-        <img src="img/1.webp" alt="">
-        <h4>ADVAN Workplus</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/2.webp" alt="">
-        <h4>Gamis melayu</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/3.webp" alt="">
-        <h4>Gamis bekasi</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/4.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/5.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/6.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/7.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/8.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/9.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/10.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/11.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/12.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/13.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/14.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="good">
-        <img src="img/15.webp" alt="">
-        <h4>Gamis mesir</h4>
-        <p>Rp 150.000</p>
-      </div>
-      <div class="link">
-        <div class="icon"><i class="size-48" data-feather="image"></i>
+      <div class="title-section">Rekomendasi</div>
+      <section id="rekomendasi" class="goods">
+        <div class="good">
+          <img src="img/1.webp" alt="">
+          <h4>ADVAN Workplus</h4>
+          <p>Rp 150.000</p>
         </div>
-        <h4>Lihat Galeri</h4>
-      </div>
-    </section>
+        <div class="good">
+          <img src="img/2.webp" alt="">
+          <h4>Gamis melayu</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/3.webp" alt="">
+          <h4>Gamis bekasi</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/4.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/5.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/6.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/7.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/8.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/9.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/10.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/11.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/12.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/13.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/14.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <div class="good">
+          <img src="img/15.webp" alt="">
+          <h4>Gamis mesir</h4>
+          <p>Rp 150.000</p>
+        </div>
+        <a class="link" href="galeri.html">
+          <div class="icon"><i class="size-48" data-feather="image"></i>
+          </div>
+          <h4>Lihat Galeri</h4>
+        </a>
+      </section>
 
-    <div class="title-section"># Shorts</div>
-    <section class="shorts">
-      <div class="short">
-        <iframe src="https://www.youtube.com/embed/Cj9HSqPV-18" allowfullscreen></iframe>
-        <a href="">
+      <div class="title-section">Shorts</div>
+      <section class="shorts">
+        <div class="short">
+          <iframe src="https://www.youtube.com/embed/Cj9HSqPV-18" allowfullscreen></iframe>
           <h4>Gamis bekasi</h4>
           <p>Rp 150.000</p>
-        </a>
-      </div>
-      <div class="short">
-        <iframe src="https://www.youtube.com/embed/bEmJvjoRboE" allowfullscreen></iframe>
-        <a href="">
+        </div>
+        <div class="short">
+          <iframe src="https://www.youtube.com/embed/bEmJvjoRboE" allowfullscreen></iframe>
           <h4>Gamis bekasi</h4>
           <p>Rp 150.000</p>
-        </a>
-      </div>
-      <div class=" short">
-        <iframe src="https://www.youtube.com/embed/jZAR1Tl6WwI" allowfullscreen></iframe>
-        <a href="">
+        </div>
+        <div class=" short">
+          <iframe src="https://www.youtube.com/embed/jZAR1Tl6WwI" allowfullscreen></iframe>
           <h4>Gamis bekasi</h4>
           <p>Rp 150.000</p>
-        </a>
-      </div>
-      <div class=" short">
-        <iframe src="https://www.youtube.com/embed/N_LsBgjpguE" allowfullscreen></iframe>
-        <a href="">
+        </div>
+        <div class=" short">
+          <iframe src="https://www.youtube.com/embed/N_LsBgjpguE" allowfullscreen></iframe>
           <h4>Gamis bekasi</h4>
           <p>Rp 150.000</p>
-        </a>
-      </div>
-    </section>
+        </div>
+      </section>
+    </main>
 
-    <nav class="desktop fixed-down">
-      <div class="menu-list">
-        <div class="icon" open-modal-kategori-down><i class="size-32" data-feather="grid"></i>
-          <p>Kategori</p>
+    <footer>
+      <nav class="desktop fixed-down">
+        <div class="menu-list">
+          <div class="icon" open-modal-kategori-down><i class="size-32" data-feather="grid"></i>
+            <p>Kategori</p>
+          </div>
+          <div class="icon" open-modal-cari-down><i class="size-32" data-feather="search"></i>
+            <p>Cari</p>
+          </div>
+          <div class="icon"><i class="size-32" data-feather="image"></i>
+            <p>Galeri</p>
+          </div>
+          <div class="icon"><i class="size-32" data-feather="youtube"></i>
+            <p>Shorts</p>
+          </div>
+          <div class="icon"><i class="size-32" data-feather="message-circle"></i>
+            <p>WhatsApp</p>
+          </div>
         </div>
-        <div class="icon" open-modal-cari-down><i class="size-32" data-feather="search"></i>
-          <p>Cari</p>
-        </div>
-        <div class="icon"><i class="size-32" data-feather="image"></i>
-          <p>Galeri</p>
-        </div>
-        <div class="icon"><i class="size-32" data-feather="youtube"></i>
-          <p>Short</p>
-        </div>
-        <div class="icon"><i class="size-32" data-feather="message-circle"></i>
-          <p>WhatsApp</p>
-        </div>
-      </div>
-    </nav>
+      </nav>
+    </footer>
   </div>
-
-
 
 
   <script src="swiperjs/swiper-bundle.js"></script>
