--- a/index.html
+++ b/index.html
@@ -359,6 +359,9 @@
 
     <header class="header">
       <div class="hero swiper swiper1">
+        <div class="hero-logo">
+          <h2 class="heading"><span class="h font-pacifico">Handayani</span><span class="s"> Store</h2>
+        </div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <img src="img/15.webp" alt="">
@@ -372,11 +375,12 @@
           <div class="swiper-slide">
             <img src="img/6.webp" alt="">
           </div>
+          <div class="swiper-slide">
+            <img src="img/3.webp" alt="">
+          </div>
         </div>
         <div class="swiper-pagination swiper-pagination1"></div>
-        <div class="hero-logo">
-          <h2 class="heading"><span class="h font-pacifico">Handayani</span><span class="s"> Store</h2>
-        </div>
+       
       </div>
 
 
